--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "prepare": "husky",
     "tsc": "tsc --noEmit",
     "build:ts": "tsc",
-    "test:unit": "mocha" ,
+    "test:unit": "mocha",
     "test:e2e": "npx playwright test --config=playwright.config.ts"
   },
   "engines": {
     "node": "24.1.0"
   },
   "dependencies": {
+    "@ministryofjustice/frontend": "^5.1.3",
     "axios": "^1.8.4",
     "body-parser": "^2.2.0",
     "chalk": "^5.4.1",
@@ -41,6 +42,7 @@
     "govuk-frontend": "^5.10.2",
     "helmet": "^8.1.0",
     "http-errors": "~2.0.0",
+    "moment": "^2.30.1",
     "morgan": "~1.10.0",
     "nunjucks": "^3.2.4",
     "sqlite": "^5.1.1",
@@ -48,8 +50,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@types/chai": "^5.2.2",
     "@playwright/test": "^1.52.0",
+    "@types/chai": "^5.2.2",
     "@types/compression": "^1.7.5",
     "@types/connect-livereload": "^0.6.3",
     "@types/cookie-parser": "^1.4.8",
