--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '24.1.0'
+          cache: "yarn"
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: yarn install --frozen-lockfile
 
       - name: Run ESLint
-        run: npm run lint
+        run: yarn lint
 
   code-security-audit:
     name: Code Security Audit
@@ -36,12 +37,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '24.1.0'
+          cache: "yarn"
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: yarn install --frozen-lockfile
 
       - name: Run security audit
-        run: npm audit
+        run: yarn audit
 
   snyk:
     name: Snyk Security Scan
