Cleans up setup

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Dependency directories
 node_modules/
 
+# Yarn cache (when using corepack)
+.yarn/cache/
+.yarn/install-state.gz
+.yarn/build-state.yml
+.yarn/unplugged/
+
 # IDEA
 .idea/
 
