--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,9 @@ RATELIMIT_HEADERS_ENABLED=True
 RATELIMIT_STORAGE_URI='DATA_BASE_URL'
 RATE_LIMIT_MAX=100
 RATE_WINDOW_MS=900000#15 * 60 * 1000 = 900000
-SERVICE_NAME='MOJ Express Skeleton'
+SERVICE_NAME='Manage your civil cases'
 SERVICE_PHASE='Alpha'
 SERVICE_URL='SERVICE_URL'
 NODE_ENV=development
+SESSION_SECRET='s3Cur3'
+SESSION_NAME='sessionId'
