Fix GitHub Actions workflows for Yarn 4.x compatibility
- Add corepack enable step to all Node.js workflows
- Replace --frozen-lockfile with --immutable for Yarn 4.x
- Update deploy.yml, mocha.yml, and playwright.yml workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
-          cache: "yarn"
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Run ESLint
         run: yarn lint
@@ -37,13 +39,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
-          cache: "yarn"
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Run security audit
-        run: yarn audit
+        run: yarn npm audit
 
   snyk:
     name: Snyk Security Scan
