--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,10 +21,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "24.1.0" # Match project's Node version
-          cache: "yarn"
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Build application
         run: yarn build
