--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -20,10 +20,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24.1.0'
-          cache: "yarn"
+
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install --immutable
 
       - name: Run Mocha unit tests
         run: yarn test:unit
