Defines resources for all environment

--- a/deploy/laa-manage-your-civil-cases/values/staging.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/staging.yaml
@@ -39,7 +39,7 @@ securityContext:
   runAsGroup: 1000
   capabilities:
     drop:
-    - ALL
+      - ALL
   seccompProfile:
     type: RuntimeDefault
 
@@ -58,17 +58,13 @@ ingress:
     external-dns.alpha.kubernetes.io/set-identifier: "manage-civil-cases-laa-manage-your-civil-cases-laa-manage-your-civil-cases-staging-green"
     external-dns.alpha.kubernetes.io/aws-weight: "100"
 
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
+resources:
+  limits:
+    cpu: 500m
+    memory: 512Mi
+  requests:
+    cpu: 250m
+    memory: 256Mi
 
 env:
   # These will be overridden by deploy.sh with values from GitHub vars/secrets
@@ -86,7 +82,7 @@ env:
   RATE_LIMIT_MAX: ""
   RATE_WINDOW_MS: ""
   NODE_ENV: ""
-  
+
 livenessProbe:
   httpGet:
     path: /status
