--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "esbuild": "^0.25.5",
     "esbuild-plugin-copy": "^2.1.1",
     "esbuild-sass-plugin": "^3.3.1",
-    "eslint": "^9.26.0",
+    "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-jsdoc": "^50.6.9",
     "eslint-plugin-prettier": "^5.4.1",
@@ -87,6 +87,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3",
+    "standard": "^17.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
