Updates config for tests to run

--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "clean": "rimraf public",
     "build": "yarn clean && yarn build:ts && node public/esbuild.js",
     "lint": "yarn eslint . --fix",
-    "dev": "yarn build && concurrently \"tsc --watch\" \"nodemon --watch public --ext js,json --ignore public/assets/ --delay 500ms public/app.js\"",
+    "dev": "yarn build && concurrently \"tsc --watch\" \"nodemon public/app.js\"",
     "deploy": "./scripts/deploy.sh",
     "prepare": "husky",
     "tsc": "tsc --noEmit",
     "build:ts": "tsc",
+    "test": "yarn test:unit && yarn test:e2e",
     "test:unit": "mocha",
     "test:e2e": "yarn playwright test --config=playwright.config.ts"
   },
@@ -63,6 +64,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.15.21",
     "@types/nunjucks": "^3.2.6",
+    "@types/sinon": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "chai": "^5.2.0",
@@ -87,6 +89,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3",
+    "sinon": "^20.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
