--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nunjucks": "^3.2.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.19.0",
     "@playwright/test": "^1.52.0",
     "@types/chai": "^5.2.2",
@@ -75,8 +76,12 @@
     "esbuild-sass-plugin": "^3.3.1",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-n": "^17.19.0",
     "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-promise": "^7.2.1",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
@@ -87,7 +92,6 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3",
-    "standard": "^17.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
