Fixes nodemon issues in dev

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf public",
     "build": "yarn clean && yarn build:ts && node public/esbuild.js",
     "lint": "yarn eslint . --fix",
-    "dev": "yarn build && concurrently \"tsc --watch\" \"nodemon public/app.js\"",
+    "dev": "yarn build:ts && concurrently \"tsc --watch\" \"node public/esbuild.js --watch\" \"nodemon\"",
     "deploy": "./scripts/deploy.sh",
     "prepare": "husky",
     "tsc": "tsc --noEmit",
