--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
     "sass": "^1.86.3",
+    "sass-embedded": "^1.89.2",
     "sinon": "^20.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
