--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # Add or remove environment variables here.
-CONTACT_EMAIL='CONTACT_EMAIL'
+CONTACT_EMAIL='eligibility@justice.gov.uk'
 CONTACT_PHONE='CONTACT_PHONE'
-DEPARTMENT_NAME='DEPARTMENT_NAME'
-DEPARTMENT_URL='DEPARTMENT_URL'
+DEPARTMENT_NAME='Legal Aid Agency'
+DEPARTMENT_URL='https://www.gov.uk/government/organisations/legal-aid-agency'
 RATELIMIT_HEADERS_ENABLED=True
 RATELIMIT_STORAGE_URI='DATA_BASE_URL'
 RATE_LIMIT_MAX=100
 RATE_WINDOW_MS=900000#15 * 60 * 1000 = 900000
 SERVICE_NAME='Manage your civil cases'
-SERVICE_PHASE='Alpha'
-SERVICE_URL='SERVICE_URL'
+SERVICE_PHASE='Beta'
+SERVICE_URL='https://www.gov.uk/legal-aid'
 NODE_ENV=development
 SESSION_SECRET='s3Cur3'
 SESSION_NAME='sessionId'
