Updates test files

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -3,7 +3,6 @@
 		"no-warnings",
 		"loader=ts-node/esm"
 	],
-	"require": "ts-node/register",
 	"extensions": [
 		"ts",
 		"tsx"
@@ -12,6 +11,7 @@
 	"reporter": "list",
 	"node-env": {
 		"TS_NODE_PROJECT": "./tsconfig.test.json",
-		"TS_NODE_TRANSPILE_ONLY": "true"
+		"TS_NODE_TRANSPILE_ONLY": "true",
+		"TS_NODE_ESM": "true"
 	}
 }
