--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/express-session": "^1.18.1",
     "@types/figlet": "^1.7.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/jsdom": "^21.1.7",
     "@types/livereload": "^0.9.5",
     "@types/mocha": "^10.0.10",
     "@types/morgan": "^1.9.9",
@@ -81,6 +82,7 @@
     "eslint-plugin-jsdoc": "^51.0.3",
     "globals": "^16.2.0",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.5.1",
     "livereload": "^0.9.3",
     "middleware-axios": "^3.0.0",
