--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ SERVICE_URL='https://www.gov.uk/legal-aid'
 NODE_ENV=development
 SESSION_SECRET='s3Cur3'
 SESSION_NAME='sessionId'
+
+# Postman Mock Server Configuration
+API_URL='https://daa67ecf-f87f-4495-9f84-0ab3e9d679ac.mock.pstmn.io'
+API_KEY='PostmanMockAPIKey'  # Replace with your actual Postman Mock API key
+API_TIMEOUT=5000
+API_RETRIES=3
