--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build:ts": "tsc",
     "test": "yarn test:unit && yarn test:e2e",
     "test:unit": "mocha",
-    "test:e2e": "yarn playwright test --config=playwright.config.ts"
+    "test:e2e": "yarn playwright test --config=playwright.config.ts",
+    "coverage": "c8 yarn test:unit --check-coverage"
   },
   "engines": {
     "node": "24.3.0"
@@ -68,6 +69,7 @@
     "@types/sinon": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
+    "c8": "^10.1.3",
     "chai": "^5.2.0",
     "chokidar": "4.0.3",
     "concurrently": "^9.1.2",
