--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -61,7 +61,7 @@ jobs:
           RATE_WINDOW_MS: "900000"
           # API configuration for testing
           API_URL: "https://daa67ecf-f87f-4495-9f84-0ab3e9d679ac.mock.pstmn.io"
-          API_KEY: ${{ vars.POSTMAN_API_KEY }}
+          API_KEY: ${{ secrets.POSTMAN_API_KEY }}
           API_TIMEOUT: "5000"
           API_RETRIES: "3"
       - name: Upload trace artifacts
