--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Publish Test Summary Results
-        run: npx github-actions-ctrf ctrf/ctrf-report.json
-
       - name: Run Mocha unit tests & c8 code coverage
         run: yarn c8 yarn test:unit --check-coverage
+
+      - name: Publish Test Summary Results
+        run: npx github-actions-ctrf coverage/
 
       - name: Download coverage result artifact as a zip file
         if: always()
