EL-2464: Add `c8` Code Coverage to the Codebase (#150)
If applied:
- this adds `c8` for unit test coverage
- updates the readme.md and lowers the coverage so job can pass.

--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -27,5 +27,12 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Run Mocha unit tests
-        run: yarn test:unit
+      - name: Run Mocha unit tests & c8 code coverage
+        run: yarn c8 yarn test:unit --check-coverage
+
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: code-coverage-report
+          path: coverage/
