Updates nunjucks and .env.example

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,12 @@ NODE_ENV=development
 SESSION_SECRET='s3Cur3'
 SESSION_NAME='sessionId'
 
-# Postman Mock Server Configuration
-API_URL='https://daa67ecf-f87f-4495-9f84-0ab3e9d679ac.mock.pstmn.io'
-API_KEY='PostmanMockAPIKey'  # Replace with your actual Postman Mock API key
+# Civil Case API Configuration
+API_URL='https://laa-civil-case-api-uat.cloud-platform.service.justice.gov.uk'
+API_PREFIX='/latest/mock'
 API_TIMEOUT=5000
 API_RETRIES=3
+API_USERNAME='test-user'
+API_PASSWORD='london12'
+API_CLIENT_ID='test-client-local'
+API_CLIENT_SECRET='test-client-local-secret'
