--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -33,7 +33,11 @@ jobs:
           NODE_ENV: "test"
           SESSION_SECRET: "mocha-test-secret"
           SESSION_NAME: "sessionId"
-          API_URL: "https://daa67ecf-f87f-4495-9f84-0ab3e9d679ac.mock.pstmn.io"
-          API_KEY: "${{ secrets.POSTMAN_API_KEY }}"
+          API_URL: "${{ vars.API_URL }}"
+          API_PREFIX: "${{ vars.API_PREFIX }}"
+          API_USERNAME: "${{ secrets.API_USERNAME }}"
+          API_PASSWORD: "${{ secrets.API_PASSWORD }}"
+          API_CLIENT_ID: "${{ secrets.API_CLIENT_ID }}"
+          API_CLIENT_SECRET: "${{ secrets.API_CLIENT_SECRET }}"
           API_TIMEOUT: "5000"
           API_RETRIES: "3"
