--- a/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
+++ b/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
@@ -79,12 +79,20 @@ spec:
               value: "{{ .Values.env.RATE_WINDOW_MS }}"
             - name: API_URL
               value: "{{ .Values.env.API_URL }}"
-            - name: API_KEY
-              value: "{{ .Values.env.API_KEY }}"
+            - name: API_PREFIX
+              value: "{{ .Values.env.API_PREFIX }}"
             - name: API_TIMEOUT
               value: "{{ .Values.env.API_TIMEOUT }}"
             - name: API_RETRIES
               value: "{{ .Values.env.API_RETRIES }}"
+            - name: API_USERNAME
+              value: "{{ .Values.env.API_USERNAME }}"
+            - name: API_PASSWORD
+              value: "{{ .Values.env.API_PASSWORD }}"
+            - name: API_CLIENT_ID
+              value: "{{ .Values.env.API_CLIENT_ID }}"
+            - name: API_CLIENT_SECRET
+              value: "{{ .Values.env.API_CLIENT_SECRET }}"
             - name: NODE_ENV
               value: "{{ .Values.env.NODE_ENV }}"
       {{- with .Values.volumes }}
