--- a/deploy/laa-manage-your-civil-cases/values/staging.yaml
+++ b/deploy/laa-manage-your-civil-cases/values/staging.yaml
@@ -81,6 +81,14 @@ env:
   RATELIMIT_STORAGE_URI: ""
   RATE_LIMIT_MAX: ""
   RATE_WINDOW_MS: ""
+  API_URL: ""
+  API_PREFIX: ""
+  API_TIMEOUT: ""
+  API_RETRIES: ""
+  API_USERNAME: ""
+  API_PASSWORD: ""
+  API_CLIENT_ID: ""
+  API_CLIENT_SECRET: ""
   NODE_ENV: ""
 
 livenessProbe:
