--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -151,8 +151,12 @@ jobs:
           ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
           ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
           api_url: ${{ vars.API_URL }}
-          # Use repository secret
-          api_key: ${{ secrets.POSTMAN_API_KEY }}
+          api_prefix: ${{ vars.API_PREFIX }}
+          # Use repository secrets for JWT auth
+          api_username: ${{ secrets.API_USERNAME }}
+          api_password: ${{ secrets.API_PASSWORD }}
+          api_client_id: ${{ secrets.API_CLIENT_ID }}
+          api_client_secret: ${{ secrets.API_CLIENT_SECRET }}
           api_timeout: ${{ vars.API_TIMEOUT }}
           api_retries: ${{ vars.API_RETRIES }}
 
@@ -189,8 +193,12 @@ jobs:
           ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
           ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
           api_url: ${{ vars.API_URL }}
-          # Use repository secret for staging (more secure, only accessible from main branch)
-          api_key: ${{ secrets.POSTMAN_API_KEY }}
+          api_prefix: ${{ vars.API_PREFIX }}
+          # Use repository secrets for JWT auth (more secure, only accessible from main branch)
+          api_username: ${{ secrets.API_USERNAME }}
+          api_password: ${{ secrets.API_PASSWORD }}
+          api_client_id: ${{ secrets.API_CLIENT_ID }}
+          api_client_secret: ${{ secrets.API_CLIENT_SECRET }}
           api_timeout: ${{ vars.API_TIMEOUT }}
           api_retries: ${{ vars.API_RETRIES }}
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -228,8 +236,12 @@ jobs:
           ratelimit_max: ${{ vars.RATE_LIMIT_MAX }}
           ratewindow_ms: ${{ vars.RATE_WINDOW_MS }}
           api_url: ${{ vars.API_URL}}
-          # Use repository secret for production (more secure, only accessible from main branch)
-          api_key: ${{ secrets.POSTMAN_API_KEY }}
+          api_prefix: ${{ vars.API_PREFIX }}
+          # Use repository secrets for JWT auth (more secure, only accessible from main branch)
+          api_username: ${{ secrets.API_USERNAME }}
+          api_password: ${{ secrets.API_PASSWORD }}
+          api_client_id: ${{ secrets.API_CLIENT_ID }}
+          api_client_secret: ${{ secrets.API_CLIENT_SECRET }}
           api_timeout: ${{ vars.API_TIMEOUT }}
           api_retries: ${{ vars.API_RETRIES }}
           slack_webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
